2014-05-20  Uwe Schulzweida

	* using CDI library version 1.6.4
	* Version 1.6.4 released

2014-04-24  Uwe Schulzweida

	* setltype, chltype: added support for GRIB2

2014-04-15  Uwe Schulzweida

	* select/delete: add support for negative timesteps
	* seltimestep: add support for negative timesteps [patch from: Etienne Tourigny]

2014-04-14  Uwe Schulzweida

	* New operator: sealevelpressure - sea level pressure

2014-03-14  Uwe Schulzweida

	* remapcon: check for missing values in normalisation

2014-03-10  Uwe Schulzweida

	* added Option -H to do not append to netCDF "history" global attribute

2014-03-03  Uwe Schulzweida

	* Zonstat: bug fix if input stream contains only zonal data

2014-02-19  Uwe Schulzweida

	* Diff: added number of different values to output

2014-02-18  Uwe Schulzweida

	* using CDI library version 1.6.3
	* Version 1.6.3 released

2014-01-29  Uwe Schulzweida

	* gridFromH5file: skipped if attribute >bounds< is defined [Bug #4411]

2014-01-24  Uwe Schulzweida

	* expr: select variables by name

2014-01-09  Uwe Schulzweida

	* gradsdes: added support for GRIB files >2GB [request: Ingo Kirchner]

2014-01-08  Uwe Schulzweida

	* gradsdes: added overloading of streamInqGinfo() (bug fix for GRIB1)

2014-01-07  Uwe Schulzweida

	* settaxis: added support for negativ time increment

2014-01-03  Uwe Schulzweida

	* Added test/test_Select.sh

2014-01-02 Uwe Schulzweida

	* gradsdes: changed LCC to LCCR in PDEF definition [Bug #4344]

2013-12-09 Uwe Schulzweida

	* cat: "Segmentation fault" if the output file already exist [Bug #4291]

2013-12-04 Uwe Schulzweida

	* gridFromH5file: set fclose degree to H5F_CLOSE_STRONG [Bug #4272]
	* cdoDefineGrid: first call gridFromH5file() for HDF tags

2013-11-29 Uwe Schulzweida

	* eca_csu: added number of csu periods with more than 5days per time period [request: Moritz Maneke]
	* eca_cfd: added number of cfd periods with more than 5days per time period  [request: Moritz Maneke]

2013-11-29 Uwe Schulzweida
